# inline-snapshot-pandas

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/inline_snapshot_pandas/: __init__.py
tests/: test_pandas.py
